style: moved ap-components to own library; closes #14

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Account Handler</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://unpkg.com/@socialwebfoundation/ap-components"></script>
     <script src="config.js" type="module"></script>
   </head>
   <body>
