--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
     <title>Account Handler</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://unpkg.com/@socialwebfoundation/ap-components"></script>
-    <script src="config.js" type="module"></script>
   </head>
   <body>
     <header>
@@ -56,10 +55,13 @@
 
         ActivityPubElement.fetchFunction =
           async (url, options) =>
-            fetch(
-              `https://corsproxy.io/?key=${config.key}&url=${encodeURIComponent(url)}`,
-              options
-            );
+            fetch(proxyUrl, {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/x-www-form-urlencoded"
+              },
+              body: new URLSearchParams({ id: url }),
+          })
 
         const address = new URLSearchParams(document.location.search).get("q");
 
