--- a/public/index.html
+++ b/public/index.html
@@ -2,73 +2,82 @@
 <html>
   <head>
     <title>Account Handler</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/@shoelace-style/shoelace@^2/cdn/themes/light.css" />
+    <script type="module" src="https://unpkg.com/@shoelace-style/shoelace@^2/cdn/shoelace.js"></script>
+    <style>
+      body {
+        font-family: system-ui, sans-serif;
+        margin: 2rem;
+        background-color: #f8f9fa;
+      }
+      main {
+        margin-top: 2rem;
+      }
+    </style>
   </head>
   <body>
-    <header>
-      <h1>Account Handler</h1>
-      <nav>
-        <ul>
-          <li><a href="javascript:registerAcctHandler()">Register</a></li>
-          <li><a href="javascript:unregisterAcctHandler()">Unregister</a></li>
-        </ul>
-        <form action="." method="get">
-          <label for="actor-search">Actor:</label>
-          <input type="search" id="actor-search" name="q" />
-          <button>Show</button>
-        </form>
-      </nav>
+    <header style="margin-bottom: 2rem;">
+      <sl-card class="nav-card" style="padding: 1rem;">
+        <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 1rem;">
+          <div style="font-size: 1.5rem; font-weight: bold;">
+            Account Handler
+          </div>
+          <form action="." method="get" style="display: flex; gap: 0.5rem;">
+            <sl-input type="search" id="actor-search" name="q" placeholder="Search actor…" clearable></sl-input>
+            <sl-button type="submit" variant="primary">Show</sl-button>
+          </form>
+          <div style="display: flex; gap: 0.5rem; flex-wrap: wrap;">
+            <sl-button variant="default" onclick="registerAcctHandler()">Register Handler</sl-button>
+            <sl-button variant="default" onclick="unregisterAcctHandler()">Unregister</sl-button>
+            <sl-button href="https://socialwebfoundation.org/" target="_blank" variant="text">Social Web Foundation</sl-button>
+            <sl-button href="https://github.com/social-web-foundation/acct-handler" target="_blank" variant="text">GitHub</sl-button>
+          </div>
+        </div>
+      </sl-card>
     </header>
+
     <main>
-      <section id="account">
-      </section>
+      <section id="account"></section>
     </main>
+
     <script type="module">
       import { ActivityPubElement } from "https://unpkg.com/@socialwebfoundation/ap-components";
 
       function registerAcctHandler() {
         const loc = document.location.origin + document.location.pathname;
         console.log("Registering protocol handler");
-        const handler = `${loc}?q=%s`
-        navigator.registerProtocolHandler(
-          "web+acct",
-          handler
-        );
+        const handler = `${loc}?q=%s`;
+        navigator.registerProtocolHandler("web+acct", handler);
       }
 
       function unregisterAcctHandler() {
         const loc = document.location.origin + document.location.pathname;
         console.log("Unregistering protocol handler");
-        const handler = `${loc}?q=%s`
-        navigator.unregisterProtocolHandler(
-          "web+acct",
-          handler
-        );
+        const handler = `${loc}?q=%s`;
+        navigator.unregisterProtocolHandler("web+acct", handler);
       }
 
       window.registerAcctHandler = registerAcctHandler;
       window.unregisterAcctHandler = unregisterAcctHandler;
 
       window.onload = () => {
-
-        ActivityPubElement.fetchFunction =
-          async (url, options) =>
-            fetch('/api/proxy', {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/x-www-form-urlencoded"
-              },
-              body: new URLSearchParams({ id: url }),
-          })
+        ActivityPubElement.fetchFunction = async (url, options) =>
+          fetch('/api/proxy', {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/x-www-form-urlencoded"
+            },
+            body: new URLSearchParams({ id: url }),
+          });
 
         const address = new URLSearchParams(document.location.search).get("q");
 
         if (address && address.startsWith("web+acct:")) {
-          const acct = address.slice(4) // take off the web+ part
-          const account = document.getElementById("account")
-          account.innerHTML = `<ap-actor-page webfinger="${acct}"></ap-actor-page>`
+          const acct = address.slice(4); // remove "web+"
+          const account = document.getElementById("account");
+          account.innerHTML = `<ap-actor-page webfinger="${acct}"></ap-actor-page>`;
         }
-      }
+      };
     </script>
   </body>
 </html>
