fix: better title

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Account Handler</title>
+    <title>Webfinger Browser</title>
     <link rel="stylesheet" href="https://unpkg.com/@shoelace-style/shoelace@^2/cdn/themes/light.css" />
     <script type="module" src="https://unpkg.com/@shoelace-style/shoelace@^2/cdn/shoelace.js"></script>
     <style>
@@ -50,7 +50,7 @@
       <header>
         <sl-card class="nav-card" style="padding: 1rem;">
           <div style="display: flex; flex-direction: column; gap: 1rem;">
-            <div class="title">Account Handler</div>
+            <div class="title">Webfinger Browser</div>
             <form action="." method="get">
               <sl-input type="search" id="actor-search" name="q" placeholder="Search actor…" clearable></sl-input>
               <sl-button type="submit" variant="primary">Show</sl-button>
