--- a/public/index.html
+++ b/public/index.html
@@ -100,25 +100,31 @@
             body: new URLSearchParams({ id: url }),
           });
 
-        const address = new URLSearchParams(document.location.search).get("q");
+        const params = new URLSearchParams(document.location.search)
 
-        if (address) {
-          const search = document.getElementById("actor-search");
-          customElements.whenDefined('sl-input').then(() => {
-            search.value = address;
-          });
-          let protocol, webfinger;
-          if (address.match(/(\w+):(\w+)@([\w\.]+)/)) {
-            [protocol, webfinger] = address.split(':', 1);
-          } else if (address.match(/(\w+)@([\w\.]+)/)) {
-            protocol = 'acct';
-            webfinger = address;
-          }
-          if (['acct', 'web+acct'].includes(protocol) && webfinger) {
-            const account = document.getElementById("account");
-            customElements.whenDefined('ap-actor-page').then(() => {
-              account.innerHTML = `<ap-actor-page webfinger="acct:${webfinger}"></ap-actor-page>`;
+        if (params.has('q')) {
+          const address = params.get("q").trim()
+
+          if (address) {
+
+            const search = document.getElementById("actor-search");
+            customElements.whenDefined('sl-input').then(() => {
+              search.value = address;
             });
+
+            const [protocol, webfinger] =
+              (address.match(/^(\w+):(\w+)@([\w\.]+)$/))
+              ? address.split(':', 2)
+              : (address.match(/^(\w+)@([\w\.]+)$/))
+                ? [ 'acct', address ]
+                : [ undefined, undefined ];
+
+            if (['acct', 'web+acct'].includes(protocol) && webfinger) {
+              const account = document.getElementById("account");
+              customElements.whenDefined('ap-actor-page').then(() => {
+                account.innerHTML = `<ap-actor-page webfinger="acct:${webfinger}"></ap-actor-page>`;
+              });
+            }
           }
         }
       };
